--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width:100%;
+  width: 100%;
   text-align: center;
 }
 
@@ -15,6 +15,12 @@
   color: white;
 }
 
+.Cheat-body {
+  width: 40%;
+  margin: 10px auto;
+  text-align: left;
+}
+
 .App-title {
   font-size: 1.5em;
 }
@@ -24,6 +30,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
