--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,42 @@
-.App {
-  width: 100%;
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.Cheat-body {
-  width: 40%;
-  margin: 10px auto;
-  text-align: left;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App{
+    display :grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-rows: 50px 1fr 50px;
+    grid-gap: 20px;
+    grid-template-areas: 
+    "hr hr hr"
+    ". main ."
+    "fr fr fr";
   }
-  to {
-    transform: rotate(360deg);
+  
+  .header{
+    grid-area: hr;
+    justify-self: center;
   }
-}
+  .main{
+    display: grid;
+    position: fixed;
+    height: 400px;
+    bottom: 50px;
+    padding-top: 10px;
+    left:25%;
+    right: 25%;
+    background: green;
+  }
+  .footer{
+    position: fixed;
+    bottom: 0px;
+    height: 50px;
+    left:25%;
+    right: 25%;
+    background: green;
+  }
+  .message{
+    margin: 5px;
+    border-radius: 5px;
+    padding: 5px;
+    word-wrap: break-word;
+    min-height: 30px;
+    background: red;
+  }
+  
