--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
-.App{
-    display :grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    grid-template-rows: 50px 1fr 50px;
-    grid-gap: 20px;
-    grid-template-areas: 
-    "hr hr hr"
-    ". main ."
-    "fr fr fr";
-  }
-  
-  .header{
-    grid-area: hr;
-    justify-self: center;
-  }
-  .main{
-    display: grid;
-    position: fixed;
-    height: 400px;
-    bottom: 50px;
-    padding-top: 10px;
-    left:25%;
-    right: 25%;
-    background: green;
-  }
-  .footer{
-    position: fixed;
-    bottom: 0px;
-    height: 50px;
-    left:25%;
-    right: 25%;
-    background: green;
-  }
-  .message{
-    margin: 5px;
-    border-radius: 5px;
-    padding: 5px;
-    word-wrap: break-word;
-    min-height: 30px;
-    background: red;
-  }
-  
+.App {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr;
+  grid-template-rows: 50px 1fr 50px;
+  grid-gap: 20px;
+  grid-template-areas: "hr hr hr" ". main ." "fr fr fr";
+}
+
+.header {
+  grid-area: hr;
+  justify-self: center;
+}
+
+.main {
+  display: grid;
+  position: fixed;
+  height: 400px;
+  bottom: 50px;
+  padding-top: 10px;
+  width: 300px;
+  right: 0;
+  border-radius: 5px 5px 0 0;
+  background: #e0ebeb;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0px;
+  height: 50px;
+  width: 300px;
+  right: 0;
+  background: #e0ebeb;
+}
+
+.message {
+  margin: 5px;
+  border-radius: 5px;
+  padding: 5px;
+  word-wrap: break-word;
+  min-height: 30px;
+  background: red;
+}
+
+.login {
+  grid-area: main;
+  justify-self: center;
+}
