--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,21 @@
 
 .main {
   display: grid;
+  grid-template-rows: 50px 1fr;
   position: fixed;
   height: 400px;
   bottom: 50px;
-  padding-top: 10px;
+  width: 300px;
+  right: 0;
+  border-radius: 5px 5px 0 0;
+  background: #e0ebeb;
+}
+
+.mainHide {
+  display: grid;
+  position: fixed;
+  height: 50px;
+  bottom: 0;
   width: 300px;
   right: 0;
   border-radius: 5px 5px 0 0;
